--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </title><link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" /><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
-		<form name="aspnetForm" method="post" action="login/" id="aspnetForm">
+		<form name="aspnetForm" method="post" action="login/index.html" id="aspnetForm">
 
 		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 	</head>
@@ -48,7 +48,7 @@
 	<tbody><tr>
 		<td align="right">Username or E-mail:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:login/1:UserName" type="text" id="_ctl0_ContentPlaceHolder1_login/1_UserName"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/index.html1:UserName" type="text" id="_ctl0_ContentPlaceHolder1_login/index.html1_UserName"></td>
 		<td>
 			
 			</td>
@@ -56,7 +56,7 @@
 	<tr>
 		<td align="right">Password:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:login/1:UserPass" type="password" id="_ctl0_ContentPlaceHolder1_login/1_UserPass"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/index.html1:UserPass" type="password" id="_ctl0_ContentPlaceHolder1_login/index.html1_UserPass"></td>
 		<td>
 			
 			</td>
@@ -70,17 +70,17 @@
 	<tr>
 	<td></td>
 		<td nowrap="" align="center" colspan="1">
-			<input type="submit"  value="Log In" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;_ctl0:ContentPlaceHolder1:login/1:login/Btn&quot;, &quot;&quot;, true, &quot;&quot;, &quot;&quot;, false, false))" language="javascript" id="_ctl0_ContentPlaceHolder1_login/1_login/Btn" class="loginButton">&nbsp;
-			<input type="submit"  value="Sign Up!" id="_ctl0_ContentPlaceHolder1_login/1_Button1" class="SignUpButton"></td>
+			<input type="submit"  value="Log In" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;_ctl0:ContentPlaceHolder1:login/index.html1:login/index.htmlBtn&quot;, &quot;&quot;, true, &quot;&quot;, &quot;&quot;, false, false))" language="javascript" id="_ctl0_ContentPlaceHolder1_login/index.html1_login/index.htmlBtn" class="loginButton">&nbsp;
+			<input type="submit"  value="Sign Up!" id="_ctl0_ContentPlaceHolder1_login/index.html1_Button1" class="SignUpButton"></td>
 		<td></td>
 	</tr>
 	<tr>
 		<td></td>
 		<td width="140">
-			<a style="font-size:12px" href="https://rebloxia.github.io/login//"><u>Reset password</u></a></td>
+			<a style="font-size:12px" href="https://rebloxia.github.io/login/index.html/"><u>Reset password</u></a></td>
 		<td>
 			
-			<input name="_ctl0:ContentPlaceHolder1:login/1:hiddenEmail" type="hidden" id="_ctl0_ContentPlaceHolder1_login/1_hiddenEmail" value="An email with instructions has been sent to {0}"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/index.html1:hiddenEmail" type="hidden" id="_ctl0_ContentPlaceHolder1_login/index.html1_hiddenEmail" value="An email with instructions has been sent to {0}"></td>
 	</tr>
 </tbody></table>
 <script for="window" event="onload">
@@ -107,13 +107,13 @@
 				</div>
 				&nbsp;
 				<div class="RoundBorder">
-					<h3>New!</h3> January 15, 2006
+					<h3>New!</h3> January 19, 2006
 					<p>A  new release of ReBLOX is out! New features include:</p>
 					<ul style="text-align:left">
-						<li>4 NEW USERS! 🌟 </li>
-						<li>Edited games!</li>
+						<li>New cool cats </li>
+						<li>Fixed some bugs</li>
 						<li>Fixed spahgetti code</li>
-						<li>New logo!.</li>
+						<li>New associates and gallery!</li>
 					</ul>
 				</div>
 			</td>
