--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 </title><link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" /><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
-		<form name="aspnetForm" method="post" action="login/index.html" id="aspnetForm">
-
 		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 	</head>
 	<body>
@@ -48,7 +46,7 @@
 	<tbody><tr>
 		<td align="right">Username or E-mail:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:login/index.html1:UserName" type="text" id="_ctl0_ContentPlaceHolder1_login/index.html1_UserName"></td>
+			<input name="" type="text" id=""></td>
 		<td>
 			
 			</td>
@@ -56,7 +54,7 @@
 	<tr>
 		<td align="right">Password:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:login/index.html1:UserPass" type="password" id="_ctl0_ContentPlaceHolder1_login/index.html1_UserPass"></td>
+			<input name="" type="password" id=""></td>
 		<td>
 			
 			</td>
@@ -100,7 +98,7 @@
 							<td><a id="_ctl0_ContentPlaceHolder1_HyperLink4" href="games/index.html"><img src="https://rebloxia.github.io/backdrop/play.png" alt="Multiplayer Games" border="0"></a></td>
 						</tr>
 						<tr>
-							<td colspan="2"> &nbsp; <iframe width="435" height="326" src="https://www.youtube.com/embed/LTnMKjXEnMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<td colspan="2"> &nbsp; <iframe allowfullscreen src="https://www.vidlii.com/embed?v=WIz2pg2iBMb&a=1" frameborder="0" width="435" height="326"></iframe>
 </iframe></a></td>
 						</tr>
 					</tbody></table>
