--- a/info/index.html
+++ b/info/index.html
@@ -54,6 +54,8 @@
 														<p> <p>
 											In 2006, there were no animations, no catalog, and no custom coloring of characters. Only admins had this feature and this also included things like T-Shirts if you're wondering what the "Browse" page was all about. 
 														<p> <p>
+											The original intention of this once great game was to simulate an online brickbuilding experience. Lately it's turned into everything but, so this revival hopefully tries to rectify that error.
+														<p> <p>
 											I try to keep all servers hosted but if they aren't please understand that there are complications that occur during server hosting and I can be occupied with real life affairs. Things aren't cheap and servers definitely aren't. 
 														<p> <p>
 											I want to add user-made games to the Games section so if you want to make a game and have it included please send me a message in the Discord. 
